--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img id="logo-icone" src="/logo.png" alt="">
+            <img id="logo-icone" src="assets/logo.png" alt="">
             <h2>Cão & Gato</h2>
         </div>
         <nav>
